# scrapgoit

./: README.md  dotenv  main.py  pyproject.toml
database/: connect-pymongo.py  connect.py  search.py  seeds.py
database/json/: authors.json
