[tool.poetry]
name = "scrapgoit"
version = "0.1.0"
description = ""
authors = ["OleksaSolo <9095945@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.0"
python-dotenv = "^1.0.0"
pymongo = "^4.6.0"
mongoengine = "^0.27.0"
redis = "^5.0.1"
redis-lru = "^0.1.2"
faker = "^20.0.3"
tqdm = "^4.66.1"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
